--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "db.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "DATABASE_URL=postgres://localhost/twitterdb node server.js"
+    "start": "DATABASE_URL=postgres://localhost/acme_users node server.js"
   },
   "repository": {
     "type": "git",
