--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "DATABASE_URL=postgres://localhost/acme_users node server.js"
+    "start:dev": "DATABASE_URL=postgress://localhost/acme_users nodemon server.js"
   },
   "repository": {
     "type": "git",
